--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "pug --output-style compressed -o dist/ src/*.pug && stylus src/style.styl -o dist/style.css",
+    "build": "pug --output-style compressed -o dist/ src/*.pug && stylus src/style.styl -o dist/style.css && npm run build-copy",
     "build-watch": "run-p -l \"build-watch:**\"",
     "build-watch:pug": "pug -w --output-style compressed -o dist/ src/*.pug",
     "build-watch:stylus": "stylus -w src/style.styl -o dist/style.css",
-    "build-watch:ts": "tsc -w"
+    "build-watch:ts": "tsc -w",
+    "build-copy": "cp src/service-worker.js dist/ && cp src/manifest.json dist/"
   },
   "author": "",
   "license": "UNLICENSED",
