--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Haven Tracker",
-    "short_name": "Haven Tracker",
-    "description": "An app for tracking initiative for Gloomhaven",
+    "name": "Guards Tracker",
+    "short_name": "Guards Tracker",
+    "description": "An app for tracking initiative for Guards",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
